--- a/change.ini
+++ b/change.ini
@@ -1,28 +1,28 @@
-ruleset:
+[custom]
+;解决DNS泄露，无分流群组
+  ruleset=😎 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+  ruleset=😎 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
+  ruleset=😎 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+  ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
+  ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
+  ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+  ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+  ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+  ruleset=DIRECT,[]GEOIP,CN,no-resolve
+  ruleset=😒 漏网之鱼,[]FINAL
 
-  - 😎 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-  - 😎 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-  - 😎 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-  - 🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
-  - Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
-  - Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
-  - DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-  - DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-  - DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-  - DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-  - REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-  - REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-  - DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-  - DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-  - DIRECT,[]GEOIP,CN,no-resolve
-  - 😒 漏网之鱼,[]FINAL
 
-custom_proxy_group:
-  - 😎 节点选择`select`[]DIRECT`.*
-  - 😒 漏网之鱼`select`[]DIRECT`.*
-  - 🎬 EMBY`select`[]DIRECT`.*
-  - Ⓜ️ 微软服务`select`[]DIRECT`.*
-  - Ⓜ️ 微软云盘`select`[]DIRECT`.*
+  custom_proxy_group=😎 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=😒 漏网之鱼`select`[]DIRECT`.*
+  custom_proxy_group=🎬 EMBY`select`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`.*
   
-enable_rule_generator: true
-overwrite_original_rules: true
+  enable_rule_generator: true
+  overwrite_original_rules: true
