--- a/change.ini
+++ b/change.ini
@@ -6,6 +6,7 @@
   ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
+  ruleset=DIRECT,DOMAIN-KEYWORD,m-team
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
