--- a/change.ini
+++ b/change.ini
@@ -4,6 +4,7 @@
   ruleset=😎 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=😎 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
   ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
+  ruleset=🚡 下载,https://raw.githubusercontent.com/Jameshan-112/change/main/download.list
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
   ruleset=DIRECT,DOMAIN-KEYWORD,m-team
@@ -23,6 +24,7 @@
   custom_proxy_group=😎 节点选择`select`[]DIRECT`.*
   custom_proxy_group=😒 漏网之鱼`select`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]DIRECT`.*
+  custom_proxy_group=🚡 下载`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`.*
   
