--- a/change.ini
+++ b/change.ini
@@ -3,7 +3,9 @@
   ruleset=😎 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=😎 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=😎 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+  ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
   ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
+  ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
   ruleset=🚡 下载,https://raw.githubusercontent.com/Jameshan-112/change/main/download.list
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
@@ -17,12 +19,13 @@
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
-  ruleset=😒 漏网之鱼,[]FINAL
-
-
+  ruleset=🐟 漏网之鱼,[]FINAL
+  
   custom_proxy_group=😎 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=😒 漏网之鱼`select`[]DIRECT`.*
+  custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`.*
+  custom_proxy_group=📱 Telegram`select`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]DIRECT`.*
+  custom_proxy_group=💬 OpenAi`select`[]DIRECT`.*
   custom_proxy_group=🚡 下载`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`.*
