--- a/change.ini
+++ b/change.ini
@@ -1,14 +1,15 @@
 [custom]
 ;解决DNS泄露，无分流群组
-  ruleset=😎 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-  ruleset=😎 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-  ruleset=😎 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+  ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+  ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
+  ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
   ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
   ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
   ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
   ruleset=🚡 下载,https://raw.githubusercontent.com/Jameshan-112/change/main/download.list
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
+  ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
   ruleset=DIRECT,DOMAIN-KEYWORD,m-team
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -21,11 +22,12 @@
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ruleset=🐟 漏网之鱼,[]FINAL
   
-  custom_proxy_group=😎 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
   custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`.*
   custom_proxy_group=📱 Telegram`select`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]DIRECT`.*
   custom_proxy_group=💬 OpenAi`select`[]DIRECT`.*
+  custom_proxy_group=🍎 苹果服务`select`[]DIRECT`.*
   custom_proxy_group=🚡 下载`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`.*
