--- a/change.ini
+++ b/change.ini
@@ -18,7 +18,7 @@
   ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
   ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ruleset=🐟 漏网之鱼,[]FINAL
   
