--- a/change.ini
+++ b/change.ini
@@ -18,6 +18,7 @@
   ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
   ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/Jameshan-112/change/main/chinaip.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ruleset=🐟 漏网之鱼,[]FINAL
   
