chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -10,6 +10,8 @@
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
   ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+  ruleset=🐲 SteamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
+  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list 
   ruleset=DIRECT,DOMAIN-KEYWORD,m-team
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -19,6 +21,7 @@
   ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
   ruleset=DIRECT,https://raw.githubusercontent.com/Jameshan-112/change/main/chinaip.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ruleset=🐟 漏网之鱼,[]FINAL
   
@@ -31,6 +34,8 @@
   custom_proxy_group=🚡 下载`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`.*
+  custom_proxy_group=🐲 SteamLink`select`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 HongKong`select`[]DIRECT`.*
   
   enable_rule_generator: true
   overwrite_original_rules: true
