--- a/change.ini
+++ b/change.ini
@@ -25,17 +25,18 @@
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ruleset=🐟 漏网之鱼,[]FINAL
   
-  custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`.*
-  custom_proxy_group=📱 Telegram`select`[]DIRECT`.*
-  custom_proxy_group=🎬 EMBY`select`[]DIRECT`.*
-  custom_proxy_group=💬 OpenAi`select`[]DIRECT`.*
-  custom_proxy_group=🍎 苹果服务`select`[]DIRECT`.*
-  custom_proxy_group=🚡 下载`select`[]DIRECT`.*
-  custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`.*
-  custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`.*
-  custom_proxy_group=🐲 SteamLink`select`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 HongKong`select`[]DIRECT`.*
+  custom_proxy_group=🚀 节点选择`[]AUTO`select`[]DIRECT`.*
+  custom_proxy_group=AUTO`url-test`.*`http://www.gstatic.com/generate_204`300
+  custom_proxy_group=🐟 漏网之鱼`[]🚀 节点选择`select`[][]DIRECT`.*
+  custom_proxy_group=📱 Telegram`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🎬 EMBY`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=💬 OpenAi`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🍎 苹果服务`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🚡 下载`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软服务`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软云盘`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🐲 SteamLink`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 HongKong`[]🚀 节点选择`select`[]DIRECT`.*
   
   enable_rule_generator: true
   overwrite_original_rules: true
