--- a/change.ini
+++ b/change.ini
@@ -27,16 +27,16 @@
   
   custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
-  custom_proxy_group=🐟 漏网之鱼`[]🚀 节点选择`select`[][]DIRECT`.*
-  custom_proxy_group=📱 Telegram`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=🎬 EMBY`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=💬 OpenAi`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=🍎 苹果服务`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=🚡 下载`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=Ⓜ️ 微软服务`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=Ⓜ️ 微软云盘`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=🐲 SteamLink`[]🚀 节点选择`select`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 HongKong`[]🚀 节点选择`select`[]DIRECT`.*
+  custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[][]DIRECT`.*
+  custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🐲 SteamLink`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 HongKong`select`[]🚀 节点选择`[]DIRECT`.*
   
   enable_rule_generator: true
   overwrite_original_rules: true
