--- a/change.ini
+++ b/change.ini
@@ -10,7 +10,7 @@
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
   ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-  ruleset=🐲 SteamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
+  ruleset=🐲 StreamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list 
   ruleset=DIRECT,DOMAIN-KEYWORD,m-team
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -35,7 +35,7 @@
   custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🐲 SteamLink`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🐲 StreamLink`select`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`[]🚀 节点选择`[]DIRECT`.*
   
   enable_rule_generator: true
