--- a/change.ini
+++ b/change.ini
@@ -27,14 +27,14 @@
   
   custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
-  custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🐲 StreamLink`select`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`[]🚀 节点选择`[]DIRECT`.*
   
