chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -12,6 +12,7 @@
   ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
   ruleset=🐲 StreamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list 
+  ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list 
   ruleset=DIRECT,DOMAIN-KEYWORD,m-team
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -37,6 +38,7 @@
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🐲 StreamLink`select`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🎮 Niantic`select`[]🚀 节点选择`[]DIRECT`.*
   
   enable_rule_generator: true
   overwrite_original_rules: true
