chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -32,15 +32,15 @@
   custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(hysteria2)`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
-  custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`(日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
+  custom_proxy_group=💬 OpenAi`select`(日本|台湾|美国|新加坡|韩国)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🐲 StreamLink`select`[]🚀 节点选择`(hysteria2)`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 HongKong`select`[]🚀 节点选择`(香港|HK|HongKong)`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🎮 Niantic`select`[]🚀 节点选择`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]DIRECT`.*
-  custom_proxy_group=📺 Taiwan`select`[]🚀 节点选择`(台湾|TW)`[]DIRECT`.*
+  custom_proxy_group=📺 Taiwan`select`(台湾|TW)`[]🚀 节点选择`[]DIRECT`.*
   
   enable_rule_generator: true
   overwrite_original_rules: true
