--- a/change.ini
+++ b/change.ini
@@ -39,7 +39,7 @@
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🐲 StreamLink`select`[]🚀 节点选择`(hysteria2)`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🎮 Niantic`select`[]🚀 节点选择`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]DIRECT`.*
+  custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   
   enable_rule_generator: true
