chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -14,6 +14,8 @@
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list 
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list 
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list 
+  ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list 
+  ruleset=🚀 节点选择,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/refs/heads/main/Rulesets/Surge/Basic/foreign.list
   ruleset=DIRECT,DOMAIN-KEYWORD,m-team
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
@@ -23,6 +25,7 @@
   ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
   ruleset=DIRECT,https://raw.githubusercontent.com/Jameshan-112/change/main/chinaip.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/refs/heads/main/Rulesets/Surge/Basic/CN.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ruleset=🐟 漏网之鱼,[]FINAL
@@ -41,6 +44,7 @@
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   
   enable_rule_generator: true
   overwrite_original_rules: true
