--- a/change.ini
+++ b/change.ini
@@ -31,7 +31,11 @@
   ruleset=🐟 漏网之鱼,[]FINAL
 
   custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`(hysteria2|香港|日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
-  custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
+  custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
+  custom_proxy_group=🐲 StreamLink`select`(hysteria2|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(hysteria2)`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
@@ -40,11 +44,11 @@
   custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
-  custom_proxy_group=🐲 StreamLink`select`(hysteria2|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
-  custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 
   enable_rule_generator: true
   overwrite_original_rules: true
+
+[dns-alias]
+studentlive.migucloud.com = pixman.io.fifalive.dnsany.com
+zqhswlive.itv.cmvideo.cn = pixman.io.fifalive.dnsany.com
