--- a/change.ini
+++ b/change.ini
@@ -49,14 +49,4 @@
   enable_rule_generator: true
   overwrite_original_rules: true
 
-  tcp-concurrent: true
-
-  use-hosts: true
-  hosts:
-    cache.ott.ystenlive.itv.cmvideo.cn: pixman.io.ystenlive.dnsany.com
-    cache.ott.bestlive.itv.cmvideo.cn: pixman.io.bestlive.dnsany.com
-    cache.ott.wasulive.itv.cmvideo.cn: pixman.io.wasulive.dnsany.com
-    cache.ott.fifalive.itv.cmvideo.cn: pixman.io.fifalive.dnsany.com
-    cache.ott.hnbblive.itv.cmvideo.cn: pixman.io.hnbblive.dnsany.com
-    zqhswlive.itv.cmvideo.cn: pixman.io.fifalive.dnsany.com
-    studentlive.migucloud.com: pixman.io.fifalive.dnsany.com
+  clash_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/base.yml
