--- a/change.ini
+++ b/change.ini
@@ -11,7 +11,7 @@
   ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
   ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
   ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-  ruleset=🚡 下载,https://raw.githubusercontent.com/Jameshan-112/change/main/download.list
+  ruleset=🚡 下载,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
   ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/Jameshan-112/change/main/m.list
   ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/Jameshan-112/change/main/onedrive.list
   ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
@@ -26,8 +26,14 @@
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
   ruleset=DIRECT,https://raw.githubusercontent.com/Jameshan-112/change/main/chinaip.list
   ruleset=DIRECT,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/refs/heads/main/Rulesets/Surge/Basic/CN.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
+  ;ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
+  ;ruleset=DIRECT,[]GEOSITE,CN
   ruleset=🐟 漏网之鱼,[]FINAL
 
   custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`(hysteria2|香港|日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
@@ -41,7 +47,7 @@
   custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=💬 OpenAi`select`(hysteria2|日本|台湾|美国|新加坡|韩国)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
-  custom_proxy_group=🚡 下载`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=🚡 下载`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
