--- a/change.ini
+++ b/change.ini
@@ -1,5 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
+  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
@@ -8,6 +9,7 @@
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list
   ruleset=🐲 StreamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
+  ruleset=💰 BN,https://raw.githubusercontent.com/ionull/change/main/bn.list
   ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
   ruleset=🎬 EMBY,https://raw.githubusercontent.com/Jameshan-112/change/main/emby.list
   ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
@@ -30,7 +32,6 @@
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
   ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ;ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
   ;ruleset=DIRECT,[]GEOSITE,CN
@@ -42,6 +43,7 @@
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=💰 BN`select`[]DIRECT`(香港|HK|HongKong)`[]🚀 节点选择`.*
   custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(hysteria2)`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
