chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -58,3 +58,4 @@
   overwrite_original_rules: true
 
   clash_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/base.yml
+  quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf
