chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -58,4 +58,5 @@
   overwrite_original_rules: true
 
   clash_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/base.yml
+  ;quan_rule_base=base/quan.conf
   quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf
