--- a/change.ini
+++ b/change.ini
@@ -58,5 +58,8 @@
   overwrite_original_rules: true
 
   clash_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/base.yml
+  ;surge_rule_base=base/surge.conf
+  ;surfboard_rule_base=base/surfboard.conf
+  ;mellow_rule_base=base/mellow.conf
   ;quan_rule_base=base/quan.conf
   quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf
