--- a/qx.conf
+++ b/qx.conf
@@ -5,6 +5,12 @@ network_check_url=http://www.baidu.com/
 server_check_url=http://www.gstatic.com/generate_204
 
 [dns]
+server=119.29.29.29
+server=223.5.5.5
+server=1.0.0.1
+server=8.8.8.8
+no-ipv6
+circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
 alias = /cache.ott.bestlive.itv.cmvideo.cn/pixman.io.bestlive.dnsany.com
 alias = /cache.ott.wasulive.itv.cmvideo.cn/pixman.io.wasulive.dnsany.com
