--- a/qx.conf
+++ b/qx.conf
@@ -18,3 +18,17 @@ alias = /cache.ott.fifalive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /cache.ott.hnbblive.itv.cmvideo.cn/pixman.io.hnbblive.dnsany.com
 alias = /zqhswlive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /studentlive.migucloud.com/pixman.io.fifalive.dnsany.com
+
+[server_remote]
+
+[filter_remote]
+
+[rewrite_remote]
+
+[server_local]
+
+[filter_local]
+
+[rewrite_local]
+
+[mitm]
