--- a/base.yml
+++ b/base.yml
@@ -8,14 +8,42 @@ hosts:
   studentlive.migucloud.com: pixman.io.fifalive.dnsany.com
 
 dns:
-  enabled: true
+  enable: true
   use-hosts: true
+  ipv6: false
+  listen: "0.0.0.0:5353"
+  enhanced-mode: fake-ip
+  fake-ip-filter:
+    - "*.lan"
+    - localhost.ptlogin2.qq.com
   nameserver:
-    - 202.96.128.86
-    - 119.29.29.29
-    - 223.5.5.5
+    - "https://223.5.5.5/dns-query"
+    - "https://doh.pub/dns-query"
   fallback:
-    - 8.8.8.8
-    - 8.8.4.4
-    - tls://1.0.0.1:853
-    - tls://dns.google:853
+    - "https://162.159.36.1/dns-query"
+    - "https://dns.google/dns-query"
+    - "tls://8.8.8.8:853"
+  fallback-filter:
+    geoip: false
+    ipcidr:
+      - 0.0.0.0/8
+      - 10.0.0.0/8
+      - 100.64.0.0/10
+      - 127.0.0.0/8
+      - 169.254.0.0/16
+      - 172.16.0.0/12
+      - 192.0.0.0/24
+      - 192.0.2.0/24
+      - 192.88.99.0/24
+      - 192.168.0.0/16
+      - 198.18.0.0/15
+      - 198.51.100.0/24
+      - 203.0.113.0/24
+      - 224.0.0.0/4
+      - 240.0.0.0/4
+      - 255.255.255.255/32
+    domain:
+      - +.google.com
+      - +.facebook.com
+      - +.youtube.com
+      - +.githubusercontent.com
