--- a/base.yml
+++ b/base.yml
@@ -20,9 +20,10 @@ dns:
     - "https://223.5.5.5/dns-query"
     - "https://doh.pub/dns-query"
   fallback:
-    - "https://162.159.36.1/dns-query"
-    - "https://dns.google/dns-query"
-    - "tls://8.8.8.8:853"
+    - 8.8.8.8
+    - 8.8.4.4
+    - tls://1.0.0.1:853
+    - tls://dns.google:853
   fallback-filter:
     geoip: false
     ipcidr:
