chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -34,7 +34,8 @@
   ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
   ;ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
-  ;ruleset=DIRECT,[]GEOSITE,CN
+  ruleset=DIRECT,[]GEOSITE,CN
+  ruleset=REJECT,https://raw.githubusercontent.com/ionull/change/main/ad.list
   ruleset=🐟 漏网之鱼,[]FINAL
 
   custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`(778117a1|香港|日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
