--- a/change.ini
+++ b/change.ini
@@ -34,7 +34,7 @@
   ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
   ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
   ruleset=DIRECT,[]GEOIP,CN,no-resolve
-  ;ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
+  ;ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn not work on quanx
   ;ruleset=DIRECT,[]GEOSITE,CN
   ruleset=🐟 漏网之鱼,[]FINAL
 
