--- a/change.ini
+++ b/change.ini
@@ -1,6 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
-  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
+  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list?v=1
   ruleset=REJECT,https://raw.githubusercontent.com/ionull/change/main/ad.list
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
