--- a/qx.conf
+++ b/qx.conf
@@ -5,10 +5,13 @@ network_check_url=http://www.baidu.com/
 server_check_url=http://www.gstatic.com/generate_204
 
 [dns]
-server=119.29.29.29
+no-system
 server=223.5.5.5
 server=1.0.0.1
 server=8.8.8.8
+server=119.29.29.29
+doh-server=https://doh.pub/dns-query
+doh-server=https://dns.alidns.com/dns-query
 no-ipv6
 circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
