--- a/qx.conf
+++ b/qx.conf
@@ -10,8 +10,7 @@ server=223.5.5.5
 server=1.0.0.1
 server=8.8.8.8
 server=119.29.29.29
-doh-server=https://doh.pub/dns-query
-doh-server=https://dns.alidns.com/dns-query
+doh-server=https://doh.pub/dns-query,https://dns.alidns.com/dns-query
 no-ipv6
 circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
