chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -1,7 +1,7 @@
 [custom]
 ;解决DNS泄露，无分流群组
   ruleset=REJECT,https://raw.githubusercontent.com/ionull/change/main/ad.list
-  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list?v=1
+  ruleset=DIRECT,https://raw.githubusercontent.com/ionull/change/main/direct.list
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
@@ -63,4 +63,4 @@
   ;surfboard_rule_base=base/surfboard.conf
   ;mellow_rule_base=base/mellow.conf
   ;quan_rule_base=base/quan.conf
-  quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf
+  quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf?v=1
