--- a/qx.conf
+++ b/qx.conf
@@ -9,9 +9,10 @@ server_check_url=http://www.gstatic.com/generate_204
 server=223.5.5.5
 server=1.0.0.1
 server=8.8.8.8
-;server=119.29.29.29
-;doh-server=https://doh.pub/dns-query,https://dns.alidns.com/dns-query
-doh-server=https://doh.pub/dns-query
+server=119.29.29.29
+doh-server=https://doh.pub/dns-query,https://dns.alidns.com/dns-query
+;doh-server=https://doh.pub/dns-query
+server=/*.nianticlabs.com/119.29.29.29
 no-ipv6
 circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
