chore: add rules

--- a/qx.conf
+++ b/qx.conf
@@ -12,9 +12,9 @@ server=8.8.8.8
 server=119.29.29.29
 doh-server=https://doh.pub/dns-query,https://dns.alidns.com/dns-query
 ;doh-server=https://doh.pub/dns-query
-server=/*.nianticlabs.com/119.29.29.29
-no-ipv6
-circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
+;server=/*.nianticlabs.com/119.29.29.29
+;no-ipv6
+;circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
 alias = /cache.ott.bestlive.itv.cmvideo.cn/pixman.io.bestlive.dnsany.com
 alias = /cache.ott.wasulive.itv.cmvideo.cn/pixman.io.wasulive.dnsany.com
