--- a/change.ini
+++ b/change.ini
@@ -6,7 +6,7 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=1
-  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list
+  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=1
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list
