chore: add rules

--- a/qx.conf
+++ b/qx.conf
@@ -13,7 +13,6 @@ server=119.29.29.29
 doh-server=https://doh.pub/dns-query,https://dns.alidns.com/dns-query
 ;doh-server=https://doh.pub/dns-query
 ;server=/*.nianticlabs.com/119.29.29.29
-server=/*.ctecdn.cn/119.29.29.29
 ;no-ipv6
 ;circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
@@ -23,8 +22,8 @@ alias = /cache.ott.fifalive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /cache.ott.hnbblive.itv.cmvideo.cn/pixman.io.hnbblive.dnsany.com
 alias = /zqhswlive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /studentlive.migucloud.com/pixman.io.fifalive.dnsany.com
-;alias = /tvonline.sun0769.com/113.214.170.247
-alias = /tvonline.sun0769.com/tvonline.sun0769.com.ctecdn.cn
+alias = /tvonline.sun0769.com/113.214.170.247
+;alias = /tvonline.sun0769.com/tvonline.sun0769.com.ctecdn.cn
 
 [server_remote]
 
