chore: add rules

--- a/qx.conf
+++ b/qx.conf
@@ -22,7 +22,7 @@ alias = /cache.ott.fifalive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /cache.ott.hnbblive.itv.cmvideo.cn/pixman.io.hnbblive.dnsany.com
 alias = /zqhswlive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /studentlive.migucloud.com/pixman.io.fifalive.dnsany.com
-alias = /tvonline.sun0769.com/113.214.170.247
+address = /tvonline.sun0769.com/113.214.170.247
 ;alias = /tvonline.sun0769.com/tvonline.sun0769.com.ctecdn.cn
 
 [server_remote]
