chore: add rules

--- a/base.yml
+++ b/base.yml
@@ -9,6 +9,7 @@ hosts:
   zqhswlive.itv.cmvideo.cn: pixman.io.fifalive.dnsany.com
   studentlive.migucloud.com: pixman.io.fifalive.dnsany.com
   tvonline.sun0769.com: 113.214.170.247
+  stream.sun0769.com: 113.214.170.247
   #tvonline.sun0769.com: tvonline.sun0769.com.ctecdn.cn
 
 dns:
