--- a/qx.conf
+++ b/qx.conf
@@ -23,6 +23,7 @@ alias = /cache.ott.hnbblive.itv.cmvideo.cn/pixman.io.hnbblive.dnsany.com
 alias = /zqhswlive.itv.cmvideo.cn/pixman.io.fifalive.dnsany.com
 alias = /studentlive.migucloud.com/pixman.io.fifalive.dnsany.com
 address = /tvonline.sun0769.com/113.214.170.247
+address = /stream.sun0769.com/113.214.170.247
 ;alias = /tvonline.sun0769.com/tvonline.sun0769.com.ctecdn.cn
 
 [server_remote]
