--- a/change.ini
+++ b/change.ini
@@ -5,8 +5,9 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=1
-  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=1
+  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=2
+  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=2
+  ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list
@@ -44,6 +45,7 @@
   custom_proxy_group=🐲 StreamLink`select`(778117a1|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HK2`select`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 Now`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=💰 BN`select`[]DIRECT`(香港|HK|HongKong)`[]🚀 节点选择`.*
