--- a/qx.conf
+++ b/qx.conf
@@ -13,6 +13,7 @@ server=119.29.29.29
 doh-server=https://doh.pub/dns-query,https://dns.alidns.com/dns-query
 ;doh-server=https://doh.pub/dns-query
 ;server=/*.nianticlabs.com/119.29.29.29
+server=/*.cloudfront.net/8.8.8.8
 ;no-ipv6
 ;circumvent-ipv4-answer = 127.0.0.1, 0.0.0.0
 alias = /cache.ott.ystenlive.itv.cmvideo.cn/pixman.io.ystenlive.dnsany.com
