--- a/change.ini
+++ b/change.ini
@@ -9,6 +9,7 @@
   ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=4
   ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list
+  ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list
   ruleset=🐲 StreamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
@@ -47,6 +48,7 @@
   custom_proxy_group=🇭🇰 HK2`select`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 Now`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🦴 Gemini`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=💰 BN`select`[]DIRECT`(香港|HK|HongKong)`[]🚀 节点选择`.*
   custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(778117a1)`[]♻️ 自动选择`[]DIRECT`.*
