--- a/change.ini
+++ b/change.ini
@@ -9,7 +9,7 @@
   ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=4
   ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list
-  ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list
+  ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list
   ruleset=🐲 StreamLink,https://raw.githubusercontent.com/ionull/change/main/stream.list
