--- a/change.ini
+++ b/change.ini
@@ -6,8 +6,8 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=2
-  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=4
-  ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list
+  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=5
+  ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=1
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list
   ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
