--- a/change.ini
+++ b/change.ini
@@ -8,7 +8,7 @@
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=2
   ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=7
   ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=3
-  ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list
+  ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list?v=1
   ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
   ruleset=🎮 Niantic,https://raw.githubusercontent.com/ionull/change/main/niantic.list
