--- a/change.ini
+++ b/change.ini
@@ -5,9 +5,10 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=4
+  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=5
   ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=7
   ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=3
+  ruleset=🇭🇰 Viu,https://raw.githubusercontent.com/ionull/change/main/viu.list
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list?v=2
   ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
@@ -47,6 +48,7 @@
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HK2`select`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 Now`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 Viu`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🦴 Gemini`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
