--- a/change.ini
+++ b/change.ini
@@ -5,10 +5,10 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=5
+  ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=6
   ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=7
-  ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=3
-  ruleset=🇭🇰 Viu,https://raw.githubusercontent.com/ionull/change/main/viu.list
+  ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=4
+  ruleset=🇭🇰 Viu,https://raw.githubusercontent.com/ionull/change/main/viu.list?V=1
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list?v=2
   ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
   ruleset=🇯🇵 JP,https://raw.githubusercontent.com/ionull/change/main/jp.list
