--- a/change.ini
+++ b/change.ini
@@ -41,7 +41,7 @@
   ;ruleset=DIRECT,[]GEOSITE,CN
   ruleset=🐟 漏网之鱼,[]FINAL
 
-  custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`(778117a1|香港|日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
+  custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ CloudFlare`(778117a1|香港|日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
   custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
   custom_proxy_group=🐲 StreamLink`select`(778117a1|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
