chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -6,7 +6,7 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=7
-  ruleset=🌍 GlobalStream,https://raw.githubusercontent.com/ionull/change/main/global-stream.list
+  ruleset=🌍 GlobalStream,https://raw.githubusercontent.com/ionull/change/main/global-stream.list?v=1
   ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=7
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list?v=2
   ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
