--- a/change.ini
+++ b/change.ini
@@ -71,3 +71,5 @@
   ;mellow_rule_base=base/mellow.conf
   ;quan_rule_base=base/quan.conf
   quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf?v=6
+
+loon_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/loon_rule_base.conf
