chore: add rules

--- a/change.ini
+++ b/change.ini
@@ -52,8 +52,8 @@
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=💰 BN`select`[]DIRECT`(香港|HK|HongKong)`[]🚀 节点选择`.*
   custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(778117a1)`[]♻️ CloudFlare`[]♻️ 自动选择`[]DIRECT`.*
-  custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
-  custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=📱 Telegram`select`[]♻️ CloudFlare`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=🎬 EMBY`select`[]♻️ CloudFlare`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=💬 OpenAi`select`(778117a1|日本|台湾|美国|新加坡|韩国)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
   custom_proxy_group=🚡 下载`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
@@ -71,5 +71,4 @@
   ;mellow_rule_base=base/mellow.conf
   ;quan_rule_base=base/quan.conf
   quanx_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/qx.conf?v=6
-
-loon_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/loon_rule_base.conf
+  loon_rule_base=https://raw.githubusercontent.com/ionull/change/refs/heads/main/lon.conf
