--- a/mini.ini
+++ b/mini.ini
@@ -18,6 +18,8 @@ ruleset=🛑 全球拦截,https://github.com/ACL4SSR/ACL4SSR/raw/refs/heads/mast
 ruleset=🛑 全球拦截,https://github.com/ACL4SSR/ACL4SSR/raw/refs/heads/master/Clash/BanEasyList.list
 ruleset=🛑 全球拦截,https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanEasyPrivacy.list
 ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/tg.list
+ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
+ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyLite.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
@@ -33,6 +35,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星空`DIRECT`.*
 custom_proxy_group=🎮 Niantic`select`[]♻️ 星空
 custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星空`[]♻️ 自动选择
+custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星空`[]♻️ 自动选择
+custom_proxy_group=💬 OpenAi`select`(778117a1)`[]♻️ CloudFlare`[]♻️ 星空`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
