--- a/mini.ini
+++ b/mini.ini
@@ -20,8 +20,8 @@ ruleset=🛑 全球拦截,https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/B
 ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/tg.list
 ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyLite.list
+#ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyMedia.list
+#ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyLite.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
