--- a/mini.ini
+++ b/mini.ini
@@ -11,6 +11,7 @@
 
 
 ruleset=🎮 Niantic,https://github.com/kedaxia/oplist/raw/refs/heads/main/niantic.list
+ruleset=🎮 Niantic,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/other.list
 ruleset=📹 油管视频,https://github.com/kedaxia/oplist/raw/refs/heads/main/yt.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
