--- a/mini.ini
+++ b/mini.ini
@@ -10,13 +10,13 @@
 ;增强国外GFW：不支持
 
 
-ruleset=🎮 Niantic,https://github.com/kedaxia/oplist/raw/refs/heads/main/niantic.list
-ruleset=📹 油管视频,https://github.com/kedaxia/oplist/raw/refs/heads/main/yt.list
+ruleset=🎮 Niantic,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/niantic.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/yt.list
 ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-ruleset=💬 OpenAi,https://github.com/kedaxia/oplist/raw/refs/heads/main/ssl.list
-ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/other.list
-ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/tg.list
+ruleset=💬 OpenAi,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/ssl.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/other.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/tg.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
