--- a/mf.ini
+++ b/mf.ini
@@ -29,7 +29,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ 星辰`[]♻️ CloudFlare`🔯 故障转移`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ 星辰`[]♻️ CloudFlare`[]🔯 故障转移`[]DIRECT`.*
 custom_proxy_group=💬 Ai平台`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
 custom_proxy_group=📹 油管视频`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
 custom_proxy_group=📲 电报消息`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
